--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "next": "^16.1.1",
+    "papaparse": "^5.4.1",
     "postcss": "^8.5.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -35,6 +36,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "dotenv": "^17.2.3"
   }
 }
