Add Resend email integration for post-purchase and renewal emails
- Install resend package
- Create email templates (welcome & renewal)
- Update Stripe webhook to send emails
- Configure notifications@voyagriq.com as sender
- Add environment variable documentation
- Create test scripts for email verification

--- a/.env.local.example
+++ b/.env.local.example
@@ -33,9 +33,9 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # OPENAI_API_KEY=sk-...
 # DATABASE_URL=postgresql://...
 
-# Email Service (Production Only)
-# SENDGRID_API_KEY=SG...
-# EMAIL_FROM=noreply@tripcostinsights.com
+# Email Service (REQUIRED for post-purchase/renewal emails)
+# Resend API Key - Get from resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxx
 
 # Authentication (Production Only)
 # NEXTAUTH_URL=https://app.tripcostinsights.com
