--- a/.env.production.example
+++ b/.env.production.example
@@ -35,9 +35,9 @@ NEXT_PUBLIC_APP_URL=https://your-domain.com
 # OPENAI_API_KEY=sk-...
 # DATABASE_URL=postgresql://production-db...
 
-# Email Service
-# SENDGRID_API_KEY=SG...
-# EMAIL_FROM=noreply@tripcostinsights.com
+# Email Service (REQUIRED for post-purchase/renewal emails)
+# Resend API Key - Get from resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxx
 
 # Authentication
 # NEXTAUTH_URL=https://app.tripcostinsights.com
