--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "recharts": "^3.6.0",
+    "resend": "^6.7.0",
     "stripe": "^20.1.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
